# Face-Recon

./: .gitignore  ABOUT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  QUICKSTART.md  README.md  README_OLD.md  RELEASE.md  TROUBLESHOOTING.md  ai_model.py  android_app.java  anomaly_detection.py  app.js  backend.md  database.sql  docker-compose.yml  docker-entrypoint.sh  encryption.py  environment.yml  face_recognition.py  frontend&backend.md  howto.txt  index.html  mqtt_client.py  pyproject.toml  requirements-ci.txt  requirements.txt  requirements_clean.txt  rpi_constroller.py  rpi_controller.py  server.py  styles.css  test_environment.py  voice_auth.py  voice_authentication.py
.github/: copilot-instructions.md
.github/workflows/: black.yml  ci-comprehensive.yml  ci.yml  python-package-conda.yml  release.yml
backend/: blockchain.sol  database.sql  server.py
data/: encodings.pickle
docs/: CI_USAGE.md
frontend/: app.js  index.html  styles.css
mobile/: ios_app.swift
scripts/: deploy.sh  release.sh  validate-ci.sh  version.py
src/: __init__.py  config.py  main_build_daatabase.py  main_build_database.py  main_realtime_recognition.py
src/utils/: error_handling.py  face_utils.py  liveness.py
tests/: test_backend_api.py  test_ci_workflow.py  test_config.py  test_import_mechanism.py  test_liveness.py
utils/: anomaly_detection.py  encryption.py
